# dev-arcade-menu

./: .gitignore  AssetManager.cpp  AssetManager.hpp  BrowsingState.cpp  BrowsingState.hpp  CMakeLists.txt  DEFINITIONS.hpp  Engine.js  Game.js  GameDTO.hpp  IntroState.cpp  IntroState.hpp  Main.js  Menu.cpp  Menu.hpp  Menu.js  Messager.js  Renderer.js  State.hpp  StateMachine.cpp  StateMachine.hpp  config.js  index.html  main.cpp  package-lock.json  package.json  utils.js
assets/ai/: introBackground.ai
